--- a/CollectReview.ipynb
+++ b/CollectReview.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    \n",
     "    return engine\n",
     "\n",
-    "def get_reviews(target = 'all'):\n",
+    "def get_reviews(languages: list, target = 'all'):\n",
     "    \"\"\"\n",
     "    target = all이면 info 테이블의 모든 데이터를, \\\n",
     "    아닌 경우는 특정 appid를 입력한다\n",
@@ -83,7 +83,8 @@
     "    \n",
     "    lst = []\n",
     "    today = datetime.today().strftime('%Y-%m-%d')\n",
-    "    languages = ['english', 'japanese', 'korean']\n",
+    "    # languages = ['english', 'japanese', 'korean']\n",
+    "    # languages = ['japanese', 'english', 'korean']\n",
     "    \n",
     "    engine = get_engine(db = MYSQL_DB, port = 3306)\n",
     "    engine_raw = get_engine(db = MYSQL_DB_RAW, port = 3306)\n",
@@ -136,17 +137,19 @@
     "    \n",
     "    if target == 'all':\n",
     "\n",
+    "\n",
+    "        q = 'SELECT appid FROM info'\n",
+    "        appids = pd.read_sql(q, conn)['appid']\n",
+    "        \n",
     "        # 임시 : 어떤 날짜에 수집하다가 중간에 오류 발생으로 끊겼을 때, 중간부터 시작하기 위한 코드\n",
     "        # 날짜가 바뀌면 새로운 리뷰가 추가되므로 무의미해질 수 있음\n",
-    "        q = 'SELECT appid FROM info'\n",
-    "        total_appids = pd.read_sql(q, conn)['appid']\n",
-    "\n",
-    "        q = f\"SELECT * FROM appid_collected WHERE year = {today[:4]} AND month = {today[5:7]}\"\n",
-    "        collected_appids_this_month = pd.read_sql(q, conn_raw)['appid']\n",
     "        \n",
-    "        appids = set(total_appids) - set(collected_appids_this_month)\n",
-    "        appids = list(appids)\n",
-    "        appids.sort()\n",
+    "        # q = f\"SELECT * FROM appid_collected WHERE year = {today[:4]} AND month = {today[5:7]}\"\n",
+    "        # collected_appids_this_month = pd.read_sql(q, conn_raw)['appid']\n",
+    "        \n",
+    "        # appids = set(total_appids) - set(collected_appids_this_month)\n",
+    "        # appids = list(appids)\n",
+    "        # appids.sort()\n",
     "        \n",
     "        for appid in appids:\n",
     "                        \n",
@@ -356,22 +359,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1.09 s\n",
-      "Wall time: 1.67 s\n"
+      "10 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 10에 관한 새로운 리뷰 갯수 : 0개\n",
+      "10 수집 종료\n",
+      "20 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 20에 관한 새로운 리뷰 갯수 : 0개\n",
+      "20 수집 종료\n",
+      "30 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 30에 관한 새로운 리뷰 갯수 : 0개\n",
+      "30 수집 종료\n",
+      "40 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 40에 관한 새로운 리뷰 갯수 : 0개\n",
+      "40 수집 종료\n",
+      "50 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 50에 관한 새로운 리뷰 갯수 : 0개\n",
+      "50 수집 종료\n",
+      "60 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 60에 관한 새로운 리뷰 갯수 : 0개\n",
+      "60 수집 종료\n",
+      "70 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 70에 관한 새로운 리뷰 갯수 : 0개\n",
+      "70 수집 종료\n",
+      "80 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 80에 관한 새로운 리뷰 갯수 : 0개\n",
+      "80 수집 종료\n",
+      "100 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 100에 관한 새로운 리뷰 갯수 : 0개\n",
+      "100 수집 종료\n",
+      "130 수집 시작\n",
+      "korean 데이터 수집 중\n",
+      "현재 130에 관한 새로운 리뷰 갯수 : 0개\n",
+      "130 수집 종료\n",
+      "220 수집 시작\n",
+      "korean 데이터 수집 중\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:2\u001b[0m\n",
+      "Cell \u001b[1;32mIn[2], line 154\u001b[0m, in \u001b[0;36mget_reviews\u001b[1;34m(languages, target)\u001b[0m\n\u001b[0;32m    150\u001b[0m json \u001b[39m=\u001b[39m get_request(url, parameters \u001b[39m=\u001b[39m params)\n\u001b[0;32m    152\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m json[\u001b[39m'\u001b[39m\u001b[39mreviews\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m--> 154\u001b[0m     \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39many(collected_id \u001b[39m==\u001b[39;49m i[\u001b[39m'\u001b[39;49m\u001b[39mrecommendationid\u001b[39;49m\u001b[39m'\u001b[39;49m]):\n\u001b[0;32m    155\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m    157\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\dowra\\OneDrive\\바탕 화면\\steam_project\\lib\\site-packages\\pandas\\core\\ops\\common.py:69\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     65\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[0;32m     67\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 69\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
+      "File \u001b[1;32mc:\\Users\\dowra\\OneDrive\\바탕 화면\\steam_project\\lib\\site-packages\\pandas\\core\\arraylike.py:32\u001b[0m, in \u001b[0;36mOpsMixin.__eq__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__eq__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     31\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__eq__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[1;32m---> 32\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmp_method(other, operator\u001b[39m.\u001b[39;49meq)\n",
+      "File \u001b[1;32mc:\\Users\\dowra\\OneDrive\\바탕 화면\\steam_project\\lib\\site-packages\\pandas\\core\\series.py:5502\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   5499\u001b[0m rvalues \u001b[39m=\u001b[39m extract_array(other, extract_numpy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, extract_range\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m   5501\u001b[0m \u001b[39mwith\u001b[39;00m np\u001b[39m.\u001b[39merrstate(\u001b[39mall\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m-> 5502\u001b[0m     res_values \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39;49mcomparison_op(lvalues, rvalues, op)\n\u001b[0;32m   5504\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_construct_result(res_values, name\u001b[39m=\u001b[39mres_name)\n",
+      "File \u001b[1;32mc:\\Users\\dowra\\OneDrive\\바탕 화면\\steam_project\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:284\u001b[0m, in \u001b[0;36mcomparison_op\u001b[1;34m(left, right, op)\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[39mreturn\u001b[39;00m invalid_comparison(lvalues, rvalues, op)\n\u001b[0;32m    283\u001b[0m \u001b[39melif\u001b[39;00m is_object_dtype(lvalues\u001b[39m.\u001b[39mdtype) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(rvalues, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 284\u001b[0m     res_values \u001b[39m=\u001b[39m comp_method_OBJECT_ARRAY(op, lvalues, rvalues)\n\u001b[0;32m    286\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    287\u001b[0m     res_values \u001b[39m=\u001b[39m _na_arithmetic_op(lvalues, rvalues, op, is_cmp\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[1;32mc:\\Users\\dowra\\OneDrive\\바탕 화면\\steam_project\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:74\u001b[0m, in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[1;34m(op, x, y)\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     73\u001b[0m     result \u001b[39m=\u001b[39m libops\u001b[39m.\u001b[39mscalar_compare(x\u001b[39m.\u001b[39mravel(), y, op)\n\u001b[1;32m---> 74\u001b[0m \u001b[39mreturn\u001b[39;00m result\u001b[39m.\u001b[39;49mreshape(x\u001b[39m.\u001b[39mshape)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "get_reviews()"
+    "languages = ['korean']\n",
+    "get_reviews(languages, \n",
+    "            target = 'all') # 특정 게임 or 수집한 전체 게임"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -390,11 +457,11 @@
     "# engine = get_engine(db = MYSQL_DB_RAW)\n",
     "# conn = engine.connect()\n",
     "\n",
-    "url = f'http://store.steampowered.com/appreviews/{730}?json=1'\n",
-    "params = {'language' : 'japanese'}\n",
-    "json = get_request(url, parameters = params)\n",
+    "# url = f'http://store.steampowered.com/appreviews/{730}?json=1'\n",
+    "# params = {'language' : 'japanese'}\n",
+    "# json = get_request(url, parameters = params)\n",
     "\n",
-    "print(json['reviews'][0]['language'])"
+    "# print(json['reviews'][0]['language'])"
    ]
   },
   {
